# Harudio-Engine

./: .clang-format  .gitignore  CMakeLists.txt  HarudioEngine4.pro  README.md  audiosys.pro  generate-cmake.pl  harudio-engine.pro  main.cpp  update-cmake.sh
Abstract/: AudioBuffer.hpp  AudioMismatchError.cpp  AudioMismatchError.hpp  AudioPlayable.hpp  AudioProvider.cpp  AudioProvider.hpp  AudioSeekable.cpp  AudioSeekable.hpp
Audio/: AudioBuffer.cpp  AudioBuffer.hpp  AudioContext.cpp  AudioContext.hpp  AudioEffect.hpp  AudioImporter.cpp  AudioImporter.hpp  AudioInputBuffer.cpp  AudioInputBuffer.hpp  AudioMixer.cpp  AudioMixer.hpp  AudioPlayable.cpp  AudioPlayable.hpp  AudioPluginPlayable.cpp  AudioPluginPlayable.hpp  AudioSource.cpp  AudioSource.hpp  AudioStream.cpp  AudioStream.hpp  AuxiliaryEffectSlot.cpp  AuxiliaryEffectSlot.hpp  CMakeLists.txt  Samplerate.cpp  Samplerate.hpp
Audio/Effect/: AdaptableConvolver.hpp  AmbisonicPanner.cpp  AmbisonicPanner.hpp  BitCrusher.cpp  BitCrusher.hpp  CMakeLists.txt  Clamp.cpp  Clamp.hpp  Compactor.cpp  Compactor.hpp  ComplexConvolver.cpp  ComplexConvolver.hpp  Convolver.cpp  Convolver.hpp  Degrader.cpp  Degrader.hpp  Delay.cpp  Delay.hpp  DimensionalPanner.hpp  Filter.cpp  Filter.hpp  Gate.cpp  Gate.hpp  ImpulseResponseGenerator.cpp  ImpulseResponseGenerator.hpp  IrBufferFiller.hpp  LowpassFilter.cpp  LowpassFilter.hpp  MatrixPanner.hpp  Overdrive.cpp  Overdrive.hpp  Panner.hpp  PositionalPanner.cpp  PositionalPanner.hpp  Resampler.cpp  Resampler.hpp  SampleLevelEffect.cpp  SampleLevelEffect.hpp  SimpleConvolver.cpp  SimpleConvolver.hpp  (+6 more)
Audio/FFTConvolver/: AudioFFT.h  CMakeLists.txt  FFTConvolver.cpp  FFTConvolver.h
Audio/FFTConvolver.tmp/: TwoStageFFTConvolver.cpp  TwoStageFFTConvolver.h
Driver/: SDL.hpp
Global/: FIO.hpp  Global.hpp
Io/: CMakeLists.txt  Global.hpp  SoundFile.hpp  StdStream.cpp  StdStream.hpp  fsqrt.hpp  sndfile.cpp  sndfile.hpp
Sound/: CMakeLists.txt  SongLibrary.cpp  SongLibrary.hpp  SoundBuffer.cpp  SoundBuffer.hpp  SoundFile.cpp  SoundFile.hpp  SoundModulePlayer.cpp  SoundModulePlayer.hpp  SoundRingbuffer.cpp  SoundRingbuffer.hpp  SoundSource.cpp  SoundSource.hpp  SoundStreamer.cpp  SoundStreamer.hpp
Util/: AudioMixer.hpp
Wrappers/: MhModuleRenderer.cpp  MhModuleRenderer.hpp  MhResampler.cpp  MhResampler.hpp  MhSoundfileWrapper.cpp  MhSoundfileWrapper.hpp
main/: CMakeLists.txt
main/source/: CMakeLists.txt  main.cpp
main/source/Global/: CMakeLists.txt  StdStream.cpp  StdStream.hpp
src/: CMakeLists.txt  main.cpp
src/Abstract/: AudioBuffer.hpp  AudioPlayable.hpp  AudioSeekable.cpp  CMakeLists.txt
src/Driver/: CMakeLists.txt  SDL.cpp
src/Global/: CMakeLists.txt  FftwMallocator.hpp  StdStream.cpp  StdStream.hpp
src/Mh/: CMakeLists.txt  ModuleRenderer.cpp  ModuleRenderer.hpp  Resampler.cpp  Resampler.hpp  SoundfileWrapper.cpp  SoundfileWrapper.hpp
src/Sound/: CMakeLists.txt  SoundBuffer.cpp  SoundBuffer.hpp  SoundModulePlayer.cpp  SoundModulePlayer.hpp  SoundSinewave.cpp  SoundSinewave.hpp  SoundSource.cpp  SoundSource.hpp  SoundStreamer.hpp
src/Util/: AudioConvolver.cpp  AudioConvolver.hpp  AudioMixer.cpp  CMakeLists.txt
src/Wrappers/: CMakeLists.txt
